# nive_userdb

./: .gitignore  MANIFEST.in  changes.txt  i18n.sh  pyproject.toml  readme.md  setup.cfg  setup.py
nive_userdb/: app.py  i18n.py  root.py  user.py
nive_userdb/extensions/: sessionuser.py
nive_userdb/extensions/tests/: test_sessionuser.py
nive_userdb/locale/: nive_userdb.pot
nive_userdb/locale/de/LC_MESSAGES/: nive_userdb.mo  nive_userdb.po
nive_userdb/locale/fr/LC_MESSAGES/: nive_userdb.mo  nive_userdb.po
nive_userdb/tests/: __local.py  db_app.py  test_app.py  test_configuration.py
nive_userdb/useradmin/: __init__.py  add.pt  adminroot.py  delete.pt  edit.pt  root.pt  view.py
nive_userdb/useradmin/tests/: test_configuration.py  test_views.py
nive_userdb/userview/: form.pt  loginpage.pt  mailpass.pt  mailpassmail.pt  main.pt  notifymail.pt  remove.pt  resetpass.pt  resetpassmail.pt  signup.pt  signupmail.pt  update.pt  view.py
nive_userdb/userview/mails/: contact.pt  mailpass.pt  notify.pt  resetpass.pt  signup.pt  verifymail.pt
nive_userdb/userview/tests/: test_configuration.py  test_views.py
