[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nive_userdb"
version = "1.5.1"
authors = [{name = "Arndt Droullier", email = "info@nive.co"}, {name = "Nive GmbH"}]
license = {text = "GPL 3"}
description = "Nive User Database"
keywords = ["cms", "framework", "pyramid"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = {Homepage = "https://niveapps.com/", Repository = "https://github.com/nive/nive_userdb"}
dependencies = ["nive>=1.5.1", "AuthEncoding"]

[project.readme]
text = """
# Nive User Database
This package provides the user database for nive applications 'nive_cms' and 'nive_datastore'.
It can be used as standalone user management plugin for pyramid applications though
the installation is not explicitly dcumented. Please refer to 'Nive cms'.
## Version
The package will soon be released as stable 1.0 version. For a better package management the previous
`nive` package has been split up into several smaller packages.
If you are updating from version 0.9.11 or older please read `update-0.9.11-to-1.0.txt`.
Version 0.9.12 is compatible.
## Source code
The source code is hosted on github: https://github.com/nive/nive_userdb
## Documentation, part of Nive cms
http://cms.nive.co/doc/html/index.html
### Translations
Translations can be extracted using lingua>=3.2
> pip install lingua-3.2
> bin/pot-create -o nive_userdb/locale/nive_userdb.pot nive_userdb
# Email tests
Use loacel email test smtp server
> python -m smtpd -n -c DebuggingServer localhost:1025
"""
content-type = "text/markdown"

[project.optional-dependencies]
testing = ["nive>=1.5.1", "AuthEncoding"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
