[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nive_userdb"
version = "1.6.2"
authors = [{name = "Arndt Droullier", email = "info@nive.co"}, {name = "Nive GmbH"}]
license = {text = "GPL 3"}
description = "Nive User Database"
keywords = ["cms", "framework", "pyramid"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = {Homepage = "https://niveapps.com/", Repository = "https://github.com/nive/nive_userdb"}
dependencies = ["nive>=1.6.8", "AuthEncoding"]

[project.readme]
text = """
# Nive User Database
This package provides the user database for nive applications 'nive_cms' and 'nive_datastore'.
It can be used as standalone user management plugin for pyramid applications though
the installation is not explicitly dcumented. Please refer to 'Nive cms'.
"""
content-type = "text/markdown"

[project.optional-dependencies]
testing = ["AuthEncoding"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
